--- a/index.html
+++ b/index.html
@@ -1,129 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 
-  <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <title>Zamzam Studio</title>
 
-    <title>Zamzamstudio</title>
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Additional CSS Files -->
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-tale-seo-agency.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-tale-seo-agency.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-<!--
-
-TemplateMo 582 Tale SEO Agency
-
-https://templatemo.com/tm-582-tale-seo-agency
-
--->
-  </head>
+</head>
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
-  <div id="preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
+<!-- ===== PRELOADER (FIXED) ===== -->
+<div id="preloader" class="js-preloader">
+  <div class="preloader-inner">
+    <span class="dot"></span>
+    <div class="dots">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+</div>
+<!-- ============================ -->
+
+<!-- Pre Header -->
+<div class="pre-header">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-sm-9">
+        <ul class="left-info">
+          <li><a href="#"><i class="fa fa-phone"></i>+91 72539 18576</a></li>
+          <li><a href="#"><i class="fa fa-envelope"></i>zamzamstudio@outlook.com</a></li>
+          <li><a href="#"><i class="fa fa-map-marker"></i>Dehradun, Uttarakhand - 248171</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-4 col-sm-3">
+        <ul class="social-icons">
+          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+        </ul>
       </div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
+</div>
 
-  <!-- ***** Pre-Header Area Start ***** -->
-  <div class="pre-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-sm-9">
-          <div class="left-info">
-            <ul>
-              <li><a href="#"><i class="fa fa-phone"></i>+91 72539 18576</a></li>
-              <li><a href="#"><i class="fa fa-envelope"></i>zamzamstudio@outlook.com</a></li>
-              <li><a href="#"><i class="fa fa-map-marker"></i>Dehradun, Uttarakhand - 248171 </a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-3">
-          <div class="social-icons">
-            <ul>
-              <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+<!-- Header -->
+<header class="header-area header-sticky">
+  <div class="container">
+    <nav class="main-nav">
+      <a href="index.html" class="logo">
+        <img src="assets/images/logo.jpg" alt="Zamzam Studio" style="max-width:112px;">
+      </a>
+      <ul class="nav">
+        <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+        <li class="scroll-to-section"><a href="#services">Services</a></li>
+        <li class="has-sub">
+          <a href="javascript:void(0)">Pages</a>
+          <ul class="sub-menu">
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="faqs.html">FAQs</a></li>
+          </ul>
+        </li>
+        <li class="scroll-to-section"><a href="#contact">Contact</a></li>
+      </ul>
+      <a class="menu-trigger"><span>Menu</span></a>
+    </nav>
+  </div>
+</header>
+
+<!-- Banner -->
+<div class="main-banner" id="top">
+  <div class="container">
+    <h6>Digital Marketing Agency</h6>
+    <h4>Dive <em>Into Marketing</em> World <span>With Zamzam Studio</span></h4>
+    <p>Professional digital marketing solutions for your brand growth.</p>
+    <div class="main-button scroll-to-section">
+      <a href="#services">Discover More</a>
     </div>
   </div>
-  <!-- ***** Pre-Header Area End ***** -->
-
-  <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
-                        <img src="assets/images/logo.jpg" alt="" style="max-width: 112px;">
-                    </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
-                    <ul class="nav">
-                      <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                      <li class="scroll-to-section"><a href="#services">Services</a></li>
-                      <li class="has-sub">
-                          <a href="javascript:void(0)">Pages</a>
-                          <ul class="sub-menu">
-                              <li><a href="about.html">About Us</a></li>
-                              <li><a href="faqs.html">FAQs</a></li>
-                          </ul>
-                      </li>
-                      <li class="scroll-to-section"><a href="#contact">Contact</a></li>
-                  </ul>   
-                    <a class='menu-trigger'>
-                        <span>Menu</span>
-                    </a>
-                    <!-- ***** Menu End ***** -->
-                </nav>
-            </div>
-        </div>
-    </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
-
-  <div class="main-banner" id="top">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-7">
-          <div class="caption header-text">
-            <h6>Digitak Marketing Agency</h6>
-            <div class="line-dec"></div>
-            <h4>Dive <em>Into The Marketing</em> World <span>With Zamzam Studio</span></h4>
-            <p>Zamzam Studio is the best Marketing agency website for your company. we provide a very professional and dedicated work to the clients in a very comfirtable amount., <a href="index.html">Home</a>, <a href="about.html">About</a>, and <a href="faqs.html">FAQ</a>.</p>
-            <div class="main-button scroll-to-section"><a href="#services">Discover More</a></div>
-           
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+</div>
+  
   <div class="services section" id="services">
     <div class="container">
       <div class="row">
@@ -377,19 +347,23 @@ https://templatemo.com/tm-582-tale-seo-agency
   </footer>
 
 
-  <!-- Scripts -->
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/tabs.js"></script>
-  <script src="assets/js/popup.js"></script>
-  <script src="assets/js/custom.js"></script>
+<script src="assets/js/isotope.min.js"></script>
+<script src="assets/js/owl-carousel.js"></script>
+<script src="assets/js/tabs.js"></script>
+<script src="assets/js/popup.js"></script>
+<script src="assets/js/custom.js"></script>
 
+<!-- PRELOADER FALLBACK -->
+<script>
+  window.addEventListener("load", function () {
+    const p = document.getElementById("preloader");
+    if (p) p.style.display = "none";
+  });
+</script>
 
-  </body>
-
+</body>
 </html>
 
