--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<script src="assets/js/isotope.min.js"></script>
-<script src="assets/js/owl-carousel.js"></script>
-<script src="assets/js/tabs.js"></script>
-<script src="assets/js/popup.js"></script>
-<script src="assets/js/custom.js"></script>
+<script src="assets/css/isotope.min.js"></script>
+<script src="assets/css/owl-carousel.js"></script>
+<script src="assets/css/tabs.js"></script>
+<script src="assets/css/popup.js"></script>
+<script src="assets/css/custom.js"></script>
 
 <!-- PRELOADER FALLBACK -->
 <script>
@@ -366,4 +366,5 @@
 
 </body>
 </html>
+
 
