--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@ https://templatemo.com/tm-570-chain-app-dev
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo.png" alt="Zamzam Studio" style="width:96px; height:45px">
+              <img src="assets/images/logo_white.png" alt="Zamzam Studio" style="width:96px; height:45px">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="#top">Home</a></li>
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
               <li class="scroll-to-section"><a href="#newsletter">More</a></li>
-              <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Contact Us</a></div></li> 
+              <li><div class="gradient-button"><a id="modal_trigger" style="color:grey;" href="#modal"><i class="fa fa-sign-in-alt"></i> Contact Us</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -178,7 +178,9 @@ https://templatemo.com/tm-570-chain-app-dev
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2 >Welcome To <em style="color:#F5E027">Zamzam Studio</em></h2>
+                    <h2 style="color:#5b2eff;">Welcome To </h2> 
+                    <h2 style="color:#5b2eff; margin-top: -20px;">Zamzam Studio</h2>
+                    <h4 style="color:#5b2eff; margin-top: -10px;">Creativity Drives Growth</h4>
                     <p>A diital marketing agency that helps your brand grow in a very small amount of budget and time. Making your brand professional takes you to another heights.</p>
                   </div>
                  
@@ -187,7 +189,7 @@ https://templatemo.com/tm-570-chain-app-dev
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/slider-dec.png" alt="">
+                <img src="assets/images/slider-dec1.png" alt="">
               </div>
             </div>
           </div>
