--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ https://templatemo.com/tm-570-chain-app-dev
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/slider-dec1.png" alt="">
+                <img src="assets/images/Home Page Bnner 5.png" alt="">
               </div>
             </div>
           </div>
@@ -653,3 +653,4 @@ https://templatemo.com/tm-570-chain-app-dev
   <script src="assets/js/custom.js"></script>
 </body>
 </html>
+
