--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <title>Zamzam Studio</title>
-    <link rel="icon" type="image/jpeg" href="assets/images/logo.jpeg">
+    <link rel="icon" type="image/jpeg" href="assets/images/fab_ic.png">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,7 @@ https://templatemo.com/tm-570-chain-app-dev
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo_white.png" alt="Zamzam Studio" style="width:96px; height:45px">
+              <img src="assets/images/header_logo.png" alt="Zamzam Studio" style="width:150px; height:150px; margin-top: -20px;">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -66,7 +66,7 @@ https://templatemo.com/tm-570-chain-app-dev
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">More</a></li>
+              <li class="scroll-to-section"><a href="Projects.html">Projects</a></li>
               <li><div class="gradient-button"><a id="modal_trigger" style="color:grey;" href="#modal"><i class="fa fa-sign-in-alt"></i> Contact Us</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -178,10 +178,9 @@ https://templatemo.com/tm-570-chain-app-dev
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2 style="color:#5b2eff;">Welcome To </h2> 
-                    <h2 style="color:#5b2eff; margin-top: -20px;">Zamzam Studio</h2>
-                    <h4 style="color:#5b2eff; margin-top: -10px;">Creativity Drives Growth</h4>
-                    <p>A diital marketing agency that helps your brand grow in a very small amount of budget and time. Making your brand professional takes you to another heights.</p>
+                    <h2 style="color:#8a8a8a; margin-top: -20px;">Marketing Become Easy</h2>
+                    <h2 style="color:#5e32ff; margin-top: -30px;">With Zamzam</h2>
+                    <p style="margin-top: -20px;">A digital marketing agency that helps your brand grow in a very small amount of budget and time. Making your brand professional takes you to another heights.</p>
                   </div>
                  
                 </div>
@@ -203,9 +202,9 @@ https://templatemo.com/tm-570-chain-app-dev
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
-            <h4>Amazing <em>Services &amp; Offers</em> for you</h4>
+            <h4 style="color:#8a8a8a">Amazing <em style="color:#5e32ff" >Services &amp; Offers</em> for you</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>If you need the greatest opportunities of being on top for your business, We have all types of services for you. Join our Trial Version if you want us to work with you.</p>
+            <p style="color:black;">If you need the greatest opportunities of being on top for your business, We have all types of services for you. Join our Trial Version if you want us to work with you.</p>
           </div>
         </div>
       </div>
