--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-570-chain-app-dev
               <li class="scroll-to-section"><a href="#services">Services</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="Projects.html">Projects</a></li>
+              <li class="scroll-to-section"><a href="projects.html">Projects</a></li>
               <li><div class="gradient-button"><a id="modal_trigger" style="color:grey;" href="#modal"><i class="fa fa-sign-in-alt"></i> Contact Us</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -652,4 +652,5 @@ https://templatemo.com/tm-570-chain-app-dev
   <script src="assets/js/custom.js"></script>
 </body>
 </html>
+
 
