--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <div class="logo">
                
             </div>
-            <div class="logo-text"><img src="assets/images/header_logo.png" alt="Zamzam Studio" style="width:150px; height:150px; margin-top: 10px;"></div>
+            <div class="logo-text" "><img src="assets/images/header_logo.png" alt="Zamzam Studio" style="width:150px; height:150px; margin-top: 10px;" ></div>
         </a>
         
         <nav class="main-menu" id="mainMenu">
@@ -60,7 +60,8 @@
    
 
     <!-- Home Section -->
-    <section id="home" class="section">
+    <section id="projects" class="section">
+
         <div class="coverflow-wrapper">
             <div class="info">
                 <h2 id="current-title">Mountain Landscape</h2>
@@ -153,6 +154,12 @@
   <script src="assets/js/popup.js"></script>
   <script src="assets/js/custom.js"></script>   
 <script src="templatemo-3d-coverflow-scripts.js"></script>
+
+<script>
+  window.addEventListener("load", function () {
+    window.scrollTo(0, 0);
+  });
+</script>
 
 </body>
 </html>
