--- a/gallery.html
+++ b/gallery.html
@@ -117,9 +117,14 @@ https://templatemo.com/tm-570-chain-app-dev
             </div>
         </div> -->
 
-       <section class="container my-5">
+     <section class="container my-5">
   <div class="row" id="gallery"></div>
 </section>
+
+<div class="preview" id="preview">
+  <img id="previewImg">
+</div>
+
 
 
   <footer id="newsletter">
@@ -178,30 +183,36 @@ https://templatemo.com/tm-570-chain-app-dev
 </div>
 
 <script>
-fetch('gallery.json')
+const username = "zeeshansafiar-ux";   // 👈 GitHub username
+const repo = "zeeshansafiar-ux";       // 👈 repo name
+const folder = "uploads";              // 👈 images folder
+
+fetch(`https://api.github.com/repos/${username}/${repo}/contents/${folder}`)
   .then(res => res.json())
-  .then(images => {
-    let html = '';
-    images.forEach(img => {
-      html += `
-        <div class="col-md-4 mb-4">
-          <div class="gallery-item">
-            <img src="uploads/${img}" 
-                 onmouseover="showPreview(this.src)" 
-                 onmouseout="hidePreview()">
-          </div>
-        </div>`;
+  .then(files => {
+    let html = "";
+
+    files.forEach(file => {
+      if (file.type === "file" && file.name.match(/\.(jpg|jpeg|png|webp)$/i)) {
+        html += `
+          <div class="col-md-4 mb-4 gallery-item">
+            <img src="${file.download_url}"
+              onmouseover="showPreview('${file.download_url}')"
+              onmouseout="hidePreview()">
+          </div>`;
+      }
     });
-    document.getElementById('gallery').innerHTML = html;
+
+    document.getElementById("gallery").innerHTML = html;
   });
 
 function showPreview(src){
-  document.getElementById('preview').style.display = 'flex';
-  document.getElementById('previewImg').src = src;
+  document.getElementById("preview").style.display = "flex";
+  document.getElementById("previewImg").src = src;
 }
 
 function hidePreview(){
-  document.getElementById('preview').style.display = 'none';
+  document.getElementById("preview").style.display = "none";
 }
 </script>
 
@@ -216,5 +227,6 @@ function hidePreview(){
   <script src="assets/js/custom.js"></script>
 </body>
 </html>
+
 
 
